# ChangeLog for xfce-extra/xfce4-systemload-plugin
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-systemload-plugin/ChangeLog,v 1.26 2012/07/14 13:39:12 maekke Exp $

  14 Jul 2012; Markus Meier <maekke@gentoo.org>
  xfce4-systemload-plugin-1.1.0.ebuild:
  arm stable, bug #416233

*xfce4-systemload-plugin-1.1.1 (30 Jun 2012)

  30 Jun 2012; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-systemload-plugin-1.1.1.ebuild:
  Version bump.

  22 May 2012; Jeff Horelick <jdhore@gentoo.org>
  xfce4-systemload-plugin-1.1.0.ebuild:
  marked x86 per bug 416233

  20 May 2012; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-systemload-plugin-1.1.0.ebuild:
  ppc/ppc64 stable wrt #416233

  20 May 2012; Agostino Sarubbo <ago@gentoo.org>
  xfce4-systemload-plugin-1.1.0.ebuild:
  Stable for amd64, wrt bug #416233

  17 May 2012; Jeroen Roovers <jer@gentoo.org>
  xfce4-systemload-plugin-1.1.0.ebuild:
  Stable for HPPA (bug #416233).

  05 May 2012; Michał Górny <mgorny@gentoo.org>
  xfce4-systemload-plugin-1.0.0.ebuild, xfce4-systemload-plugin-1.1.0.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  19 Apr 2012; Jeroen Roovers <jer@gentoo.org>
  xfce4-systemload-plugin-1.1.0.ebuild:
  Marked ~hppa (bug #412627).

*xfce4-systemload-plugin-1.1.0 (19 Apr 2012)

  19 Apr 2012; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-systemload-plugin-1.1.0.ebuild:
  Version bump.

  23 Apr 2011; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-systemload-plugin-1.0.0.ebuild:
  alpha/ia64/sparc stable wrt #358407

  29 Mar 2011; Jeroen Roovers <jer@gentoo.org>
  xfce4-systemload-plugin-1.0.0.ebuild:
  Stable for HPPA (bug #358407).

  22 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
  xfce4-systemload-plugin-1.0.0.ebuild:
  ppc/ppc64 stable wrt #358407

  22 Mar 2011; Thomas Kahle <tomka@gentoo.org>
  xfce4-systemload-plugin-1.0.0.ebuild:
  x86 stable per bug 358407

  21 Mar 2011; Markus Meier <maekke@gentoo.org>