@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/xfce4-systemload-plugin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-systemload-plugin/ChangeLog,v 1.26 2012/07/14 13:39:12 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-systemload-plugin/ChangeLog,v 1.27 2012/08/07 13:11:23 ssuominen Exp $
+
+  07 Aug 2012; Samuli Suominen <ssuominen@gentoo.org>
+  -xfce4-systemload-plugin-1.0.0.ebuild:
+  old
 
   14 Jul 2012; Markus Meier <maekke@gentoo.org>
   xfce4-systemload-plugin-1.1.0.ebuild:
